objects/CMPL123QMS__Part_Information__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Current_Revision__c</fullName>
        <label>Current Revision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Part_or_Document_No__c</fullName>
        <externalId>true</externalId>
        <label>Part or Document No</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Part Information</label>
    <nameField>
        <displayFormat>NO-{0000}</displayFormat>
        <label>Part-Doc No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Part_or_Document_No__c</columns>
        <columns>CMPL123QMS__Description__c</columns>
        <columns>CMPL123QMS__Current_Revision__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>CMPL123QMS__Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__Part</fullName>
        <active>true</active>
        <label>Part</label>
    </recordTypes>
</CustomObject>